syntax = "proto2";

// to generate the corresponding Java class use this command
// protoc.exe --java_out=src/main/java/ src/main/java/distributedsearch/model/proto/search_cluster_protos.proto

// Proto package (different from Java package) to avoid name collisions with other definitions
package distributed.search;

// output Java package name
option java_package = "distributedsearch.model.proto";

// Java class that contains all the below defined message types
option java_outer_classname = "SearchModel";

// request from front-end to search coordinator
message Request {
  required string search_query = 1;
}

// response from search coordinator to front-end
message Response {
  repeated DocumentStats relevant_documents = 1;

  message DocumentStats {
    required string document_name = 1;
    optional double score = 2;
    optional int64 document_size = 3;
  }
}